Adds project name

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>0.10-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>Official TokenChannel java 11 async client library</description>
     <url>https://tokenchannel.io</url>
 
